- Default interface expected state can be configured
- GPS subagent (provides location data from NMEA compatible GPS receivers)
- Server can update node location using GPS subagent
- Fixed error while event alarm linking multiple times
- NetXMS processes uses LC_CTYPE from environment for terminal I/O
- Fixed bug in saving service checks
- Management console:
	- Fixed grid issues in network maps
	- Added "hide links" option on network maps
- Fixed issues: #962, #988, #1048, #1124


*
* 2.0.2
*

- Optimized LDAP synchronization for large directories
- Added NXSL API for manipulating object geolocation
- Fixed bug that allows to crash server remotely by sending garbage to client connector port
- NXSL: new hash map attributes "keys" and "values"
- Object custom attributes can be accessed as hash map in NXSL
- New server debug console commands "log" and "logmark"
- Management console:
	- Improved file transfer error handling
	- Double click on geo map zoom in and center map on point under cursor
- Android Console:
	- Updated ACRA library: now crash reports are sent via e-mail (will use the app installed on device to send mail)
	- Fixed bug in action bar commands: disconnect and exit sometimes wasn't working
- Android Agent:
	- Updated ACRA library: now crash reports are sent via e-mail (will use the app installed on device to send mail)
- Fixed issues: #1042, #1049, #1093, #1111, #1117, #1125, #1128, #1133, #1134, #1139


*
* 2.0.1
*

- Fixed random server crash if ODBC database driver is used
- Fixed incorrect reading of long text fields by MS SQL database driver
- Fixed issues: #1052, #1063


*
* 2.0
*

- Template import correctly handles updates for existing templates
- Scripts can be used as instance source in instance discovery DCIs
- NXSL node object attribute snmpSysDescription renamed back to sysDescription
- Selectors in NXSL
- Array attributes in NXSL: size, minIndex, maxIndex
- Hash map attributes in NXSL: size
- New NXSL function: mapList