@@ -204,6 +204,12 @@
 #define DCIDESC_SYSTEM_MEMORY_SWAP_TOTAL          _T("Total amount of swap space")
 #define DCIDESC_SYSTEM_MEMORY_SWAP_USED           _T("Used swap space")
 #define DCIDESC_SYSTEM_MEMORY_SWAP_USED_PCT       _T("Percentage of used swap space")
+#define DCIDESC_SYSTEM_MSGQUEUE_BYTES             _T("Message queue {instance}: bytes in queue")
+#define DCIDESC_SYSTEM_MSGQUEUE_BYTES_MAX         _T("Message queue {instance}: maximum allowed bytes in queue")
+#define DCIDESC_SYSTEM_MSGQUEUE_CHANGE_TIME       _T("Message queue {instance}: last change time")
+#define DCIDESC_SYSTEM_MSGQUEUE_MESSAGES          _T("Message queue {instance}: number of messages")
+#define DCIDESC_SYSTEM_MSGQUEUE_RECV_TIME         _T("Message queue {instance}: last receive time")
+#define DCIDESC_SYSTEM_MSGQUEUE_SEND_TIME         _T("Message queue {instance}: last send time")
 #define DCIDESC_SYSTEM_UNAME                      _T("System uname")
 #define DCIDESC_AGENT_ACCEPTEDCONNECTIONS         _T("Number of connections accepted by agent")
 #define DCIDESC_AGENT_ACCEPTERRORS                _T("Number of accept() call errors")
