@@ -1,6 +1,6 @@
 /* 
 ** NetXMS subagent for GNU/Linux
-** Copyright (C) 2004 Alex Kirhenshtein
+** Copyright (C) 2004-2016 Raden Solutions
 **
 ** This program is free software; you can redistribute it and/or modify
 ** it under the terms of the GNU General Public License as published by
@@ -19,6 +19,8 @@
 **/
 
 #include "linux_subagent.h"
+#include <sys/ipc.h>
+#include <sys/msg.h>
 
 /**
  * Handler for System.ConnectedUsers parameter
@@ -414,4 +416,62 @@ LONG H_SourcePkgSupport(const TCHAR *pszParam, const TCHAR *pArg, TCHAR *pValue,
 {
 	ret_int(pValue, 1);
 	return SYSINFO_RC_SUCCESS;
+}
+
+/**
+ * Handler for System.MsgQueue.* parameters
+ */
+LONG H_SysMsgQueue(const TCHAR *param, const TCHAR *arg, TCHAR *value, AbstractCommSession *session)
+{
+   TCHAR buffer[64];
+   if (!AgentGetParameterArg(param, 1, buffer, 64))
+      return SYSINFO_RC_UNSUPPORTED;
+
+   int queueId = -1;
+   if (buffer[0] == _T('@'))  // queue identified by ID
+   {
+      TCHAR *eptr;
+      queueId = (int)_tcstol(&buffer[1], &eptr, 0);
+      if ((queueId < 0) || (*eptr != 0))
+         return SYSINFO_RC_UNSUPPORTED;   // Invalid queue ID
+   }
+   else  // queue identified by key
+   {
+      TCHAR *eptr;
+      key_t key = (key_t)_tcstoul(buffer, &eptr, 0);
+      if (*eptr != 0)
+         return SYSINFO_RC_UNSUPPORTED;   // Invalid key
+      queueId = msgget(key, 0);
+      if (queueId < 0)
+         return (errno == ENOENT) ? SYSINFO_RC_NO_SUCH_INSTANCE : SYSINFO_RC_ERROR;
+   }
+
+   struct msqid_ds data;
+   if (msgctl(queueId, IPC_STAT, &data) != 0)
+      return ((errno == EIDRM) || (errno == EINVAL)) ? SYSINFO_RC_NO_SUCH_INSTANCE : SYSINFO_RC_ERROR;
+
+   switch((char)*arg)
+   {
+      case 'b':
+         ret_uint64(value, (UINT64)data.__msg_cbytes);
+         break;
+      case 'B':
+         ret_uint64(value, (UINT64)data.msg_qbytes);
+         break;
+      case 'c':
+         ret_uint64(value, (UINT64)data.msg_ctime);
+         break;
+      case 'm':
+         ret_uint64(value, (UINT64)data.msg_qnum);
+         break;
+      case 'r':
+         ret_uint64(value, (UINT64)data.msg_rtime);
+         break;
+      case 's':
+         ret_uint64(value, (UINT64)data.msg_stime);
+         break;
+      default:
+         return SYSINFO_RC_UNSUPPORTED;
+   }
+   return SYSINFO_RC_SUCCESS;
 }
