@@ -10,6 +10,7 @@
 - Fixed error while event alarm linking multiple times
 - NetXMS processes uses LC_CTYPE from environment for terminal I/O
 - Fixed bug in saving service checks
+- Agent parameters for monitoring System V message queues
 - Management console:
 	- Fixed grid issues in network maps
 	- Added "hide links" option on network maps
